# jarvis

./: .env.example  .gitignore  pyproject.toml  requirements.txt
jarvis/: .env.example  MOBILE.md  README.md  cli.py  pyproject.toml  requirements.txt  server.py  voice.py
jarvis/jarvis/: __init__.py  agent.py  auth.py  config.py  memory.py  persona.py
jarvis/jarvis/tools/: __init__.py  files.py  memory.py  osint.py  system.py
jarvis/tools/: base.py  shell.py  voice.py
jarvis/web/: app.js  manifest.webmanifest
web/: index.html  styles.css  sw.js
